// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chain mutations should create chain from a mixed styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test@anyupp.com",
  "id": "int_test_chain_id_2",
  "isActive": true,
  "name": "˜Rab lánc S",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#a8692a",
      "indicator": "#30bf60",
      "primary": "#fffffa",
      "secondary": "#fffffb",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Chain mutations should create chain from a new styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test@anyupp.com",
  "id": "int_test_chain_id_3",
  "isActive": true,
  "name": "˜Rab lánc S",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": null,
      "backgroundLight": null,
      "borderDark": null,
      "borderLight": null,
      "disabled": null,
      "highlight": null,
      "indicator": null,
      "primary": "#fffffa",
      "secondary": "#fffffb",
      "textDark": null,
      "textLight": null,
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Chain mutations should create chain from an old styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test@anyupp.com",
  "id": "int_test_chain_id_1",
  "isActive": true,
  "name": "˜Rab lánc S",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#a8692a",
      "indicator": "#30bf60",
      "primary": null,
      "secondary": null,
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Chain mutations should update chain from a mixed styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test-mod@anyupp.com",
  "id": "int_test_chain_id_2",
  "isActive": true,
  "name": "˜Rab lánc S modded",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#a8692a",
      "indicator": "#30bf60",
      "primary": "#fffffa",
      "secondary": "#fffffb",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Chain mutations should update chain from a new styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test-mod@anyupp.com",
  "id": "int_test_chain_id_3",
  "isActive": true,
  "name": "˜Rab lánc S modded",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": null,
      "backgroundLight": null,
      "borderDark": null,
      "borderLight": null,
      "disabled": null,
      "highlight": null,
      "indicator": null,
      "primary": "#fffffa",
      "secondary": "#fffffb",
      "textDark": null,
      "textLight": null,
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;

exports[`Chain mutations should update chain from an old styled fixture 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "test-mod@anyupp.com",
  "id": "int_test_chain_id_1",
  "isActive": true,
  "name": "˜Rab lánc S modded",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#a8692a",
      "indicator": "#30bf60",
      "primary": null,
      "secondary": null,
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "updatedAt": Any<String>,
}
`;
